--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -1,3 +1,21 @@
+@import 'variables';
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  @apply bg-[#f4f4f5] dark:bg-[#18181b];
+}
+
+.bg-default {
+  @apply bg-[#fafafa] dark:bg-[#1b1d1e];
+}
+
+.text-default {
+  @apply text-[#262626] dark:text-[#e0e6f0];
+}
+
+.link-box {
+  @apply hover:text-blue-700 hover:bg-blue-100 dark:hover:bg-inherit;
+}
