--- a/assets/styles/animation.scss
+++ b/assets/styles/animation.scss
@@ -1,3 +1,4 @@
+// dropdown menu
 .dropdown-menu-enter-active {
   @apply transition ease-out duration-100;
 }
@@ -15,4 +16,44 @@
 }
 .dropdown-menu-leave-to {
   @apply transform opacity-0 scale-95;
+}
+
+// modal
+.modal-enter-active {
+  @apply duration-300 ease-out;
+}
+.modal-enter-from {
+  @apply opacity-0 scale-95;
+}
+.modal-enter-to {
+  @apply opacity-100 scale-100;
+}
+.modal-leave-active {
+  @apply duration-200 ease-in;
+}
+.modal-leave-from {
+  @apply opacity-100 scale-100;
+}
+.modal-leave-to {
+  @apply opacity-0 scale-95;
+}
+
+// modal bg
+.modal-bg-enter-active {
+  @apply duration-300 ease-out;
+}
+.modal-bg-enter-from {
+  @apply opacity-0;
+}
+.modal-bg-enter-to {
+  @apply opacity-100;
+}
+.modal-bg-leave-active {
+  @apply duration-200 ease-in;
+}
+.modal-bg-leave-from {
+  @apply opacity-100;
+}
+.modal-bg-leave-to {
+  @apply opacity-0;
 }
