feat(sha): Add checksum

--- a/assets/styles/buttons.scss
+++ b/assets/styles/buttons.scss
@@ -7,6 +7,6 @@ button,
   }
 
   &.secondary {
-    @apply bg-gray-200 text-gray-900 hover:bg-gray-300 dark:bg-gray-700;
+    @apply bg-gray-200 text-gray-900 hover:bg-gray-300 dark:bg-gray-700 dark:text-gray-300 dark:hover:bg-gray-600;
   }
 }
