feat(style): change markdown style

--- a/assets/styles/markdown.scss
+++ b/assets/styles/markdown.scss
@@ -73,7 +73,7 @@ article {
   }
 
   code, pre {
-    @apply bg-gray-300 dark:bg-gray-700 rounded-md;
+    @apply bg-slate-200 dark:bg-gray-700 rounded-md;
   }
 
   code {
