--- a/assets/styles/markdown.scss
+++ b/assets/styles/markdown.scss
@@ -72,7 +72,8 @@ article {
     @apply cursor-pointer;
   }
 
-  code, pre {
+  code,
+  pre {
     @apply bg-slate-200 dark:bg-gray-700 rounded-md;
   }
 
