--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -1,7 +1,5 @@
 @import "variables";
-@import "animation";
 @import "markdown";
-@import "buttons";
 
 // https://gist.github.com/spemer/a0e218bbb45433bd611e68446523a00b
 body::-webkit-scrollbar {
@@ -29,16 +27,12 @@ html {
 }
 
 body {
-  @apply text-base bg-[--color-bg-body] text-[--color-text];
-  @apply dark:bg-[--color-bg-body-dark] dark:text-[--color-text-dark];
+  @apply text-base bg-gray-200/60 text-gray-900;
+  @apply dark:bg-black dark:text-gray-100;
 }
 
 .bg-default {
-  @apply bg-[--color-bg-default] dark:bg-[--color-bg-default-dark];
-
-  &.hoverable {
-    @apply hover:bg-[--color-bg-default-hover] dark:hover:bg-[--color-bg-default-hover-dark];
-  }
+  @apply bg-gray-50/80 dark:bg-gray-800/80;
 }
 
 .card {
@@ -46,25 +40,13 @@ body {
 }
 
 .link-box {
-  @apply hover:bg-gray-200 dark:hover:bg-slate-700 transition-colors duration-150;
+  @apply transition-colors hover:bg-gray-200 dark:hover:bg-gray-700;
 
   &.active {
-    @apply bg-blue-500 text-white dark:hover:bg-blue-500;
+    @apply bg-primary-500 text-gray-100;
   }
 }
 
-.menu-items {
-  @apply absolute z-10 mt-2 w-28 py-2 origin-top-right rounded-md shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none;
-}
-
-.menu-item {
-  @apply block px-4 py-2 text-sm;
-}
-
-.form-input {
-  @apply rounded-md;
-}
-
 .a-link {
-  @apply text-blue-500 hover:underline transition-colors;
+  @apply text-primary-500 hover:underline transition-colors;
 }
