--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -32,10 +32,14 @@ body {
 
 .bg-default {
   @apply bg-gray-50/90 dark:bg-gray-800/80;
+
+  &.hoverable {
+    @apply hover:bg-gray-50 dark:hover:bg-gray-700/80;
+  }
 }
 
 .card {
-  @apply shadow-md rounded-md p-4 flex flex-col gap-2 overflow-x-hidden border-gray-300 dark:border-gray-800;
+  @apply shadow-md rounded-md p-4 flex flex-col gap-2 overflow-x-hidden transition-colors border-gray-300 dark:border-gray-800;
 }
 
 .link-box {
